# H2-P3-Todo-chatbot

./: .gitignore  CLAUDE.md  CORS_DEBUG_CHECKLIST.md  Dockerfile  OPENAI_ERROR_HANDLING.md  OPENROUTER_FALLBACK_SETUP.md  README.md  alembic.ini  init_db.py  main.py  openapi_from_root.json  package-lock.json  package.json  project_structure.txt  pyproject.toml  requirements.txt  test_agent_fix.py  test_chat.py  test_chat_auth.py  test_chat_openai.py  test_login.py  test_openai_config.py  test_openai_error_handling.py  test_register.py
.specify/memory/: constitution.md
alembic/: env.py  script.py.mako
backend/: Dockerfile  README.md  config.py  main.py  requirements.txt
backend/database/: session.py
backend/docs/: api_documentation.md
backend/mcp/: server.py
backend/middleware/: auth.py  auth_validation.py  token_refresh.py
backend/models/: conversation.py  message.py  task.py
backend/services/: chat_service.py  message_service.py
backend/src/: main.py
backend/tests/: test_agent_integration.py  test_chat_api.py
backend/utils/: conversation_loader.py
docs/: e2e_test_flow.md  security_review.md
frontend/: FIX_VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/tests/: test_chat_component.jsx
shared/types/: api-contracts.ts
specs/001-full-stack-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-chatbot/: 1-agent-specification.md  2-skills-sub-agent-design.md  README.md  (+10 more)
src/: cli.py  main.py  models.py  storage.py
(+102 files in other folders)
